# Desk32

./: README.md
Code/: Desk32.ino  esp_panel_board_supported_conf.h  lv_conf.h
Design_File/: Desk32.spj
Files_To_Copy/: lv_conf.h
Files_To_Copy/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_AboutScreen.c  ui_AboutScreen.h  ui_CalendarScreen.c  ui_CalendarScreen.h  ui_HomeScreen.c  ui_HomeScreen.h  ui_HydrateScreen.c  ui_HydrateScreen.h  ui_LoadingScreen.c  ui_LoadingScreen.h  ui_PomodoroScreen.c  ui_PomodoroScreen.h  ui_SettingScreen.c  ui_SettingScreen.h  ui_TaskListScreen.c  ui_TaskListScreen.h  ui_comp_hook.c  ui_events.h  ui_font_OswaldLight20.c  ui_font_OswaldLight24.c  ui_font_OswaldLight32.c  ui_font_OswaldMedium20.c  ui_font_OswaldMedium32.c  ui_font_OswaldMedium48.c  ui_font_OswaldMedium80.c  ui_helpers.c  ui_helpers.h  ui_img_about_png.c  ui_img_brightnessicon_png.c  ui_img_desk32_png.c  ui_img_humidityicon_png.c  ui_img_tempicon_png.c  ui_img_watericon_png.c
